--- a/statistical_inference/homework/homework3.Rmd
+++ b/statistical_inference/homework/homework3.Rmd
@@ -1,40 +1,71 @@
 ---
 title: "Statistical Inference Homework 3"
 output:
-  pdf_document:
-    toc: no
   html_document:
     theme: united
-    toc: yes
+    toc: no
+  pdf_document:
+    toc: no
 ---
 
 ## Question 1  
 Load the data set mtcars in the datasets R package. Calculate a 95% confidence interval to the nearest MPG for the variable mpg.  
-- What is the lower endpoint of the interval?  
-- What is the upper endpoint of the interval?  
+- What is the lower endpoint of the interval?  **18**  
+- What is the upper endpoint of the interval?  **22**  
 
+```{r}
+# load mtcars dataset
+library(datasets)
+data(mtcars)
+# attach so you don't have to use $ notation as in: mtcars$mpg
+attach(mtcars)
+# extra stuff
+head(mtcars)
+mean(mpg)
+sd(mpg)
+# answer
+round(t.test(mpg)$conf.int)
+```
 
 ## Question 2  
 Suppose that standard deviation of 9 paired differences is 1. What value would the average difference have to be so that the lower endpoint of a 95% students t confidence interval touches zero?  
-- Give the number here to two decimal places  
+- Give the number here to two decimal places  **0.77**  
+
+n = 9  
+sd = 1  
+ybar +- t.975 * 1/3 where 1/3 = 1/sqrt(n) = 1/sqrt(9)
+$\bar{y} +- t.975 1/3 = 0$
+```{r}
+round(qt(0.975, 8)/3,2)
+```
+
 
 ## Question 3  
 An independent group Student's T interval is used instead of a paired T interval when:  
 - The observations are paired between the groups.  
-- The observations between the groups are naturally assumed to be statistically independent  
+**X** The observations between the groups are naturally assumed to be statistically independent  
 - As long as you do it correctly, either is fine.  
 - More details are needed to answer this question  
 
 
 ## Question 4  
 Consider the mtcars dataset. Construct a 95% T interval for MPG comparing 4 to 6 cylinder cars (subtracting in the order of 4 - 6) assume a constant variance.  
-- What is the lower endpoint of the interval to 1 decimal place?  
-- What is the upper endpoint of the interval to 1 decimal place?  
+- What is the lower endpoint of the interval to 1 decimal place?  **3.15**  
+- What is the upper endpoint of the interval to 1 decimal place?  **10.69**  
 
+Answer: 
+```{r}
+head(mtcars)
+c4 <- mtcars$mpg[mtcars$cyl == 4]
+c6 <- mtcars$mpg[mtcars$cyl == 6]
+t.test(c4, c6, var.equal = TRUE)
 
+# alternate
+round(as.vector(t.test(c4, c6, var.equal = TRUE)$conf.int),1)
+```
 ## Question 5  
 If someone put a gun to your head and said "Your confidence interval must contain what it's estimating or I'll pull the trigger", what would be the smart thing to do?  
-- Make your interval as wide as possible  
+**X** Make your interval as wide as possible  
 - Make your interval as small as possible  
 - Call the authorities  
 
@@ -42,7 +73,7 @@ If someone put a gun to your head and said "Your confidence interval must contai
 ## Question 6  
 Refer back to comparing MPG for 4 versus 6 cylinders. What do you conclude?  
 - The interval is above zero, suggesting 6 is better than 4 in the terms of MPG  
-- The interval is above zero, suggesting 4 is better than 6 in the terms of MPG  
+**X** The interval is above zero, suggesting 4 is better than 6 in the terms of MPG  
 - The interval does not tell you anything about the hypothesis test; you have to do the test.  
 - The interval contains 0 suggesting no difference.  
 
@@ -51,18 +82,36 @@ Refer back to comparing MPG for 4 versus 6 cylinders. What do you conclude?
 Suppose that 18 obese subjects were randomized, 9 each, to a new diet pill and a placebo. Subjects' body mass indices (BMIs) were measured at a baseline and again after having received the treatment or placebo for four weeks. The average difference from follow-up to the baseline (followup - baseline) was 3 kg/m2 for the treated group and 1 kg/m2 for the placebo group. The corresponding standard deviations of the differences was 1.5 kg/m2 for the treatment group and 1.8 kg/m2 for the placebo group. The study aims to answer whether the change in BMI over the four week period appear to differ between the treated and placebo groups.  
 - What is the pooled variance estimate? (to 2 decimal places)  
 
+Answer:  
+Since the the two groups are same size, the pooled variance is the average of the two. We are given standard deviations, so we need to convert to variance.  
+```{r}
+round((1.5^2 + 1.8^2)/2,2)
+```
 
-## Question 8  
+A general solution whould be:
+
+```{r}
+n1 <- n2 <- 9
+x1 <- -3  ##treated
+x2 <- 1  ##placebo
+s1 <- 1.5  ##treated
+s2 <- 1.8  ##placebo
+spsq <- ( (n1 - 1) * s1^2 + (n2 - 1) * s2^2) / (n1 + n2 - 2)
+round(spsq,2)
+```
+
+
+## Question 8 (hold out from previous version of class)   
 For Binomial data the maximum likelihood estimate for the probability of a success is  
-- The proportion of successes  
+**X** The proportion of successes  
 - The proportion of failures  
 - A shrunken version of the proportion of successes  
 - A shrunken version of the proportion of failures  
 
 
-## Question 9  
+## Question 9 (hold out from previous version of class)  
 Bayesian inference requires  
 - A type I error rate  
 - Setting your confidence level  
-- Assigning a prior probability distribution  
+**X** Assigning a prior probability distribution  
 - Evaluating frequency error rates  
